# rawinfo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Data.h  FormatUtils.cpp  FormatUtils.h  TimeUtils.cpp  TimeUtils.h  macros.h  main.cpp
